--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ cache/
 *.zip
 *.7z
 scratch_data
+**.DS_Store
+Measuring_Quantum_Effeciency/export_fig/.ignore
+Measuring_Quantum_Effeciency/output_plots
