--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ scratch_data
 **.DS_Store
 Measuring_Quantum_Effeciency/export_fig/.ignore
 Measuring_Quantum_Effeciency/output_plots
+**.parfor_progress.txt 
